run linter